# SundayAfternoonProjects

./: .gitignore  KdeEstimator.py  Spark-Cheatsheet.ipynb  main.py  pyproject.toml
Dirichlet_process/: crp.py  gem.py  generative_model_gem.py  generative_model_k_gmm.py
Dirichlet_process/dpmm/: crp_gibbs.py  density_estimation.py  draw_from_dp.py  vanilla.py
Dirichlet_process/gmm_implementations/: marginalized_gaussian_mixture_model.py  vanilla_gmm.py
FeatureMining/: README.md  main.py
IPythonDebugger/: example.py  ipd.py
KernelDensityEstimator/: KdeEstimator.py  README.md  main.py
LSTM_autoencoder/: time_series_embedding.ipynb
MCMC/: README.md  main.py
RetailPrediction/: README.md  main.py  result.csv
TensorflowExamples/lin_regression/: tf_lin_reg_v1.py  tf_lin_reg_v2.py
bolt/: README.md  bolt_home_task_EDA.ipynb  bolt_home_task_baseline.ipynb
hellofresh/: README.md  document.pages  documentation.txt  requirements.txt
hellofresh/data_exploration/: eda.py
hellofresh/db/: model.pkl  predictions.csv
hellofresh/scripts/: database.py  model_revaluation.py  predict.py  unit_test.py
mnist/: simple_nn.py
pytorch_tutorials/: basic_autoencoder.ipynb  torch_basics.ipynb  torch_nn_tutorial.ipynb
visualization_toolkit/: joint_facet_grid.ipynb
