[tool.poetry]
name = "sundayafternoonprojects"
version = "0.1.0"
description = ""
authors = ["Paresh Nakhe <paresh.nakhe@zalando.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
torchvision = "0.17.2"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
